RESOLVED FIXED165244
localToAbsolute() does incorrect conversion for elements inside position:fixed with zooming
https://bugs.webkit.org/show_bug.cgi?id=165244
Summary localToAbsolute() does incorrect conversion for elements inside position:fixe...
Simon Fraser (smfr)
Reported 2016-11-30 23:05:04 PST
localToAbsolute() does incorrect conversion for elements inside position:fixed with zooming
Attachments
Patch for EWS (9.58 KB, patch)
2016-11-30 23:18 PST, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews103 for mac-yosemite (929.94 KB, application/zip)
2016-12-01 00:18 PST, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (974.06 KB, application/zip)
2016-12-01 00:21 PST, Build Bot
no flags
Archive of layout-test-results from ews116 for mac-yosemite (1.65 MB, application/zip)
2016-12-01 00:26 PST, Build Bot
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (11.88 MB, application/zip)
2016-12-01 00:30 PST, Build Bot
no flags
Patch (15.16 KB, patch)
2016-12-01 21:27 PST, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2016-11-30 23:18:36 PST
Created attachment 295823 [details] Patch for EWS
Build Bot
Comment 2 2016-12-01 00:18:36 PST
Comment on attachment 295823 [details] Patch for EWS Attachment 295823 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2599648 New failing tests: fast/visual-viewport/zoomed-fixed.html
Build Bot
Comment 3 2016-12-01 00:18:40 PST
Created attachment 295824 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-12-01 00:21:55 PST
Comment on attachment 295823 [details] Patch for EWS Attachment 295823 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2599649 New failing tests: fast/visual-viewport/zoomed-fixed.html
Build Bot
Comment 5 2016-12-01 00:21:58 PST
Created attachment 295825 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-12-01 00:26:45 PST
Comment on attachment 295823 [details] Patch for EWS Attachment 295823 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2599653 New failing tests: fast/visual-viewport/zoomed-fixed.html
Build Bot
Comment 7 2016-12-01 00:26:48 PST
Created attachment 295826 [details] Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 8 2016-12-01 00:30:26 PST
Comment on attachment 295823 [details] Patch for EWS Attachment 295823 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/2599605 New failing tests: fast/zooming/client-rect-in-fixed-zoomed.html
Build Bot
Comment 9 2016-12-01 00:30:30 PST
Created attachment 295827 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Simon Fraser (smfr)
Comment 10 2016-12-01 21:27:31 PST
Simon Fraser (smfr)
Comment 11 2016-12-03 14:01:17 PST
Note You need to log in before you can comment on or make changes to this bug.